objects/vlocity_cmt__QuoteDiscountItem__c.object
<CustomObject>
    <description>An item or category of items to which a quote discount applies. Master-detail child object of Quote Discount (QuoteDiscount__c).</description>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Quote Discount Items (Category)</relationshipLabel>
        <relationshipName>QuoteDiscountItemsCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Discount Items (Product)</relationshipLabel>
        <relationshipName>QuoteDiscountItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QuoteDiscountId__c</fullName>
        <label>Quote Discount</label>
        <referenceTo>vlocity_cmt__QuoteDiscount__c</referenceTo>
        <relationshipLabel>Quote Discount Items</relationshipLabel>
        <relationshipName>QuoteDiscountItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>